<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geenie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="greeting_message_login">Nice to meet you!\nTell us your name.</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="greeting_message_signup">Fine choice!\nYou\'re gonna love our app.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup_message">Not one of us ? Sign up here !</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email Adress</string>
    <string name="action_today">Go to today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="action_new">Create new string</string>


    <string-array name="nav_drawer_items">
        <item>Dash</item>
        <item>Schedule</item>
        <item>Members</item>
        <item>Files</item>
        <item>Assignments</item>
        <item>Settings</item>
    </string-array>
    <array name="nav_drawer_icons_black">
    <item>@drawable/ic_school_black_24dp</item>
        <item>@drawable/ic_today_black_24dp</item>
        <item>@drawable/ic_people_black_24dp</item>
        <item>@drawable/ic_folder_shared_black_24dp</item>
        <item>@drawable/ic_check_black_24dp</item>
        <item>@drawable/ic_settings_black_24dp</item>
    </array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_school_grey600_36dp</item>
        <item>@drawable/ic_today_grey600_36dp</item>
        <item>@drawable/ic_people_grey600_36dp</item>
        <item>@drawable/ic_folder_shared_grey600_36dp</item>
        <item>@drawable/ic_check_grey600_36dp</item>
        <item>@drawable/ic_settings_grey600_36dp</item>
    </array>


</resources>