<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">


            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="?colorPrimary"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_text_content_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"

                >

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    app:baseColor="@android:color/white"
                    app:floatingLabel="highlight"
                    app:maxCharacters="20"
                    app:primaryColor="?colorAccent"
                    app:singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:baseColor="@android:color/white"
                    app:floatingLabel="highlight"
                    app:minCharacters="6"
                    app:primaryColor="?colorAccent" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/ll_login"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_text_content_margin"
                android:text="@string/greeting_message_login"
                android:textColor="?colorPrimary"
                android:textSize="28sp" />


            <Button
                android:id="@+id/ok_login"
                android:layout_width="@dimen/btn"
                android:layout_height="@dimen/btn"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/ll_login"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="-26dp"
                android:background="@drawable/btn_round"
                android:elevation="6dp" />

            <TextView
                android:id="@+id/signup_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:text="@string/signup_message"
                android:textColor="?colorPrimary"
                android:textSize="20sp" />


        </RelativeLayout>
    </RelativeLayout>

    <!-- Add content here -->


    <!-- The navigation drawer -->

    <RelativeLayout
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#DADADA"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgvw"
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:background="?colorPrimary"
            android:tint="@color/photo_tint" />


        <ListView
            android:id="@+id/drawer_items"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_below="@id/imgvw"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/drawer_items"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:text="Geenie"
            android:textColor="#fffcfcfc"
            android:textSize="50sp" />
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
